Added links on  users root

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Listing users</h1>
 
+<%= link_to "Benchmark", benchmark_users_path %>
+<br/>
+<%= link_to "Profiling: Slow", slow_users_path %>
+<br/>
+<%= link_to "Profiling: Imrpoved", improved_users_path %>
+<br/>
+<%= link_to "Profiling: Quick", quick_users_path %>
+<br/>
+
+
+<hr>
 <table>
   <thead>
     <tr>
